Week 2 HW additions

--- a/week2/Makefile
+++ b/week2/Makefile
@@ -1,6 +1,9 @@
-week2.exe: week2.c
-	gcc -o week2.exe week2.c
-	./week2.exe
-	ls -l
+all: largest_smallest.exe arithmetic.exe comparing_integers.exe
+largest_smallest.exe: largest_smallest.c
+	gcc -o largest_smallest.exe largest_smallest.c
+arithmetic.exe: arithmetic.c
+	gcc -o arithmetic.exe arithmetic.c
+comparing_integers.exe: comparing_integers.c
+	gcc -o comparing_integers.exe comparing_integers.c
 clean: 
-	rm week2.exe; 
+	rm largest_smallest.exe arithmetic.exe comparing_integers.exe;
