--- a/week4/Makefile
+++ b/week4/Makefile
@@ -1,9 +1,9 @@
-main: float_to_dollars.exe grosssalary.exe swap_num.exe
-float_to_dollars.exe: float_to_dollars.c
-	gcc -o float_to_dollars.exe float_to_dollars.c
-grosssalary.exe: grosssalary.c
-	gcc -o grosssalary.exe grosssalary.c
-swap_num.exe: swap_num.c
-	gcc -o swap_num.exe swap_num.c
+main: electricity_bill.exe leap_year.exe total_grade.exe
+electricity_bill.exe: electricity_bill.c
+	gcc -o electricity_bill.exe electricity_bill.c
+leap_year.exe: leap_year.c
+	gcc -o leap_year.exe leap_year.c
+total_grade.exe: total_grade.c
+	gcc -o total_grade.exe total_grade.c
 clean: 
-	rm float_to_dollars.exe grosssalary.exe swap_num.exe
+	rm electricity_bill.exe leap_year.exe total_grade.exe
