--- a/week4/Makefile
+++ b/week4/Makefile
@@ -1,9 +1,11 @@
-main: electricity_bill.exe leap_year.exe total_grade.exe
+main: electricity_bill.exe leap_year.exe total_grade.exe gallons_per_mile.exe
 electricity_bill.exe: electricity_bill.c
 	gcc -o electricity_bill.exe electricity_bill.c
 leap_year.exe: leap_year.c
 	gcc -o leap_year.exe leap_year.c
 total_grade.exe: total_grade.c
 	gcc -o total_grade.exe total_grade.c
+gallons_per_mile.exe: gallons_per_mile.c
+	gcc -o gallons_per_mile.exe gallons_per_mile.c
 clean: 
-	rm electricity_bill.exe leap_year.exe total_grade.exe
+	rm electricity_bill.exe leap_year.exe total_grade.exe gallons_per_mile.exe
